--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -65,7 +65,7 @@
               <img style="margin-left: 5px;" src="{{request.user.customer.imageURL}}" class="ava">
               {% else %}
               <img style="margin-left: 5px;" src="{% static 'images/placeholder_img.jpg' %}" class="ava">
-              {% endif %} 
+              {% endif %}
               <span style="margin-left: 25px;" class="text nav-text"
                 >Köszöntünk<br/><strong>{{request.user}}</strong></span
               >
@@ -101,13 +101,13 @@
             {% endif %}
             {% if request.user.is_superuser == False %}
             <li class="nav-link">
-              <a href="https://www.youtube.com/watch?v=cf5xI0FG1_I&ab_channel=Hurvinyek" target="_blank">
+              <a href="https://youtu.be/76t8MF0Dl_c" target="_blank">
                 <i class="bx bxl-youtube icon"></i>
                 <span class="text nav-text">Útmutató</span>
               </a>
             </li>
             <li class="nav-link">
-              <a href="https://www.youtube.com/watch?v=cf5xI0FG1_I&ab_channel=Hurvinyek" target="_blank">
+              <a href="https://www.youtube.com/watch?v=Qo3IAXfRBaw" target="_blank">
                 <i class="bx bx-group icon"></i>
                 <span class="text nav-text">Bemutatkozás</span>
               </a>
